Update some colours

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Portfolio | Sovit</title>
 <style>
 body {
-  background: #f2cba2;
+  background: antiquewhite;
   margin-top: 100px;
 }
 header {
@@ -20,13 +20,12 @@ header > h1 {
   margin: 0px;
 }
 section.hero {
-  background: magenta;
+  background: darkorchid;
   display: grid;
   grid-template-columns: auto 40%;
   padding: 0px 100px;
 }
 section.hero > div.left-side {
-  background: magenta;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,7 +38,7 @@ section.hero > div.left-side button {
   font-size: 20pt;
 }
 section.hero > div.right-side {
-  background: pink;
+  background: lightcoral;
   padding: 0px;
 }
 section.hero > div.right-side > img {
