Make stylesheet separate from html document; Add meta information

--- a/index.html
+++ b/index.html
@@ -1,50 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="author" content="Sovit Kumar">
+  <meta name="description" content="This is my Portfolio website where I can show my Projects qualifications.">
+  <meta name="keywords" content="Sovit, 5ovit, portfolio, resume, project, career, developer">
+  <meta name="color-scheme" content="only light">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0;">
   <title>Portfolio | Sovit</title>
-<style>
-body {
-  background: antiquewhite;
-  margin-top: 100px;
-}
-header {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  padding: 10px 24px;
-  border-bottom: 2px solid black;
-}
-header > h1 {
-  font-family: monospace;
-  margin: 0px;
-}
-section.hero {
-  background: darkorchid;
-  display: grid;
-  grid-template-columns: auto 40%;
-  padding: 0px 100px;
-}
-section.hero > div.left-side {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-section.hero > div.left-side p {
-  font-size: 38pt;
-  margin: 10px;
-}
-section.hero > div.left-side button {
-  font-size: 20pt;
-}
-section.hero > div.right-side {
-  background: lightcoral;
-  padding: 0px;
-}
-section.hero > div.right-side > img {
-  width: 100%;
-}
-</style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header>
@@ -53,8 +17,11 @@ section.hero > div.right-side > img {
   <section class="hero">
     <div class="left-side">
       <div class="greetings">
-        <p>Hi, This is Sovit.</p>
-        <p>And welcome to my Portfolio.</p>
+        <p>
+          Hi,<br>
+          This is Sovit.<br>
+          And welcome to my Portfolio.
+        </p>
       </div>
       <div class="quick-buttons">
         <button>About me</button>
