Changed fonts; added dark modew

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="author" content="Sovit Kumar">
   <meta name="description" content="This is my Portfolio website where I can show my Projects qualifications.">
   <meta name="keywords" content="Sovit, 5ovit, portfolio, resume, project, career, developer">
-  <meta name="color-scheme" content="only light">
+  <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="width=device-width, initial-scale=1.0;">
   <title>Portfolio | Sovit</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header>
-    <h1>Portfolio</h1>
+    <h1>Sovit</h1>
   </header>
   <section class="hero">
     <div class="left-side">
