Changed layout of hero section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <header>
     <h1>Sovit</h1>
   </header>
+
   <section class="hero">
-    <div class="left-side">
+    <div class="hero-left">
       <div class="greetings">
         <p>
           Hi,<br>
@@ -28,8 +29,8 @@
         <button>Projects</button>
       </div>
     </div>
-    <div class="right-side">
-      <img src="profile_photo_border_nobg.png" alt="Sovit" />
+    <div class="hero-right">
+      <img width=400 height=400 src="profile_photo_border_nobg.png" alt="Sovit" />
     </div>
   </section>
 </body>
