Updated Layout of hero section and changed some colors

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </p>
       </div>
       <div class="quick-buttons">
-        <button>About me</button>
-        <button>Projects</button>
+        <button><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About me</a></button>
+        <button><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Projects</a></button>
       </div>
     </div>
     <div class="hero-right">
