Added Dark Mode Button

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0;">
   <title>Portfolio | Sovit</title>
   <link rel="stylesheet" href="index.css">
+  <script type="text/javascript" src="index.js" defer></script>
 </head>
 <body>
   <header>
     <h1>Sovit</h1>
+    <button id="darkmode_btn">dark</button>
   </header>
 
   <section class="hero">
