Added icons in darkmode button

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0;">
   <title>Portfolio | Sovit</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&icon_names=dark_mode,light_mode&display=block">
   <script type="text/javascript" src="index.js" defer></script>
 </head>
 <body>
   <header>
     <h1>Sovit</h1>
-    <button id="darkmode_btn">dark</button>
+    <button id="darkmode_btn">
+      <span class="material-symbols-outlined"> dark_mode </span>
+      <span class="material-symbols-outlined"> light_mode </span>
+    </button>
   </header>
 
   <section class="hero">
@@ -32,7 +36,7 @@
       </div>
     </div>
     <div class="hero-right">
-      <img width=400 height=400 src="profile_photo_border_nobg.png" alt="Sovit" />
+      <img width=350 height=350 src="profile_photo_border_nobg.png" alt="Sovit" />
     </div>
   </section>
 </body>
