Changed photo; fixed the hero layout(I guess*)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="hero-right">
-      <img width=350 height=350 src="profile_photo_border_nobg.png" alt="Sovit" />
+      <img src="profile_photo_nobg.png" alt="Sovit" />
     </div>
   </section>
 </body>
