--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="hero-right">
-      <img src="profile_photo_nobg.png" alt="Sovit" />
+      <img src="Profile_photo_nobg.png" alt="Sovit" />
     </div>
   </section>
 </body>
