Changed url for my photo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="hero-right">
-      <img src="Profile_photo_nobg.png" alt="Sovit" />
+      <img src="https://drive.google.com/thumbnail?id=1RXKNvuYZ-OVjzTgh7L6j3igQNk0xPUtw&sz=w1000" alt="Sovit" />
     </div>
   </section>
 </body>
