First step on React.js

--- a/index.html
+++ b/index.html
@@ -1,43 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="author" content="Sovit Kumar">
-  <meta name="description" content="This is my Portfolio website where I can show my Projects qualifications.">
-  <meta name="keywords" content="Sovit, 5ovit, portfolio, resume, project, career, developer">
-  <meta name="color-scheme" content="light dark">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0;">
-  <title>Portfolio | Sovit</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&icon_names=dark_mode,light_mode&display=block">
-  <script type="text/javascript" src="index.js" defer></script>
-</head>
-<body>
-  <header>
-    <h1>Sovit</h1>
-    <button id="darkmode_btn">
-      <span class="material-symbols-outlined"> dark_mode </span>
-      <span class="material-symbols-outlined"> light_mode </span>
-    </button>
-  </header>
-
-  <section class="hero">
-    <div class="hero-left">
-      <div class="greetings">
-        <p>
-          Hi,<br>
-          This is Sovit.<br>
-          And welcome to my Portfolio.
-        </p>
-      </div>
-      <div class="quick-buttons">
-        <button><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About me</a></button>
-        <button><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Projects</a></button>
-      </div>
-    </div>
-    <div class="hero-right">
-      <img src="https://drive.google.com/thumbnail?id=1RXKNvuYZ-OVjzTgh7L6j3igQNk0xPUtw&sz=w1000" alt="Sovit" />
-    </div>
-  </section>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Sovit Kumar" />
+    <meta name="description" content="This is my Portfolio website where I can show my Projects qualifications." />
+    <meta name="keywords" content="Sovit, 5ovit, portfolio, resume, project, career, developer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Portfolio | Sovit</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&icon_names=dark_mode,light_mode&display=block">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
